[FIX] web: center o_cp_action_menus div
Since commit a1f286916de099560e0f344def3b2d7ffa9fec38 o_cp_action_menus is not centered
anymore as justify-content: space-between; was removed from scss.

with this commit we are making o_cp_action_menus centered again.

task-2628050

--- a/addons/web/static/src/search/control_panel/control_panel.scss
+++ b/addons/web/static/src/search/control_panel/control_panel.scss
@@ -31,6 +31,7 @@
 
     .o_cp_bottom_left {
         display: flex;
+        justify-content: space-between;
 
         > .o_cp_action_menus {
             padding-right: 10px;
